--- a/styles.css
+++ b/styles.css
@@ -10,8 +10,22 @@ padding: 3% 15%;
 
 
 /* tittle */
+.main-nav{
+    display: flex;
+    margin-top: -70px;
+    flex-wrap: wrap;
+}
+.nav-item{
+    color: white;
+    font-size: 20px;
+    font-weight: 500;
+    transition: transform ease 300ms;
+    &:hover{
+        transform: translateY(-6px);
+        font-weight: bold;
 
-
+    }
+}
 #title{
     background-color: #ff4c68;
     color: white;
